--- a/roster-front-end/src/app/pages/register/register.component copy.scss
+++ b/roster-front-end/src/app/pages/register/register.component copy.scss
@@ -1,17 +1,14 @@
 @import "../../../styles/variables.scss";
 
-.profile-form-container {
+.register-form-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
     gap: 20px; 
-
     h3 {
         font-size: 20px !important;
-        display: flex;
-        justify-content: center;
-        text-decoration: underline;
     }
 }
+
 .form-section {
     padding: 15px;
     border-radius: 10px;
@@ -30,19 +27,10 @@ mat-form-field {
         padding-bottom: 0 !important; 
     }
 }
-.preview-image{
-    height: 200px;
-    width: fit-content;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-}
+
 .file-upload {
     margin-top: 10px;
 
-    div {
-        margin: 15px 0 15px 0;
-        display: flex;
-        flex-direction: column;
-    }
     label {
         display: block;
         font-weight: 500;
@@ -73,17 +61,3 @@ mat-form-field {
         background-color: darken($secondary-color, 10%);
     }
 }
-@media (max-width: 768px) {
-    .profile-form-container {
-      grid-template-columns: 1fr;
-    }
-    .role-upload-section {
-      grid-column: span 1;
-    }
-    .preview-image {
-      width: 100%;
-      height: auto;
-      max-width: 250px;
-    }
-  }
-  
